# appveyor_artifacts

./: .gitignore  .travis.yml  appveyor_artifacts.py  setup.cfg  setup.py  tox.ini
tests/: test_artifacts_urls.py  test_download_file.py  test_get_arguments.py  test_get_urls.py  test_main.py  test_query_artifacts.py  test_query_build_version.py  test_query_job_ids.py
