[metadata]
name = appveyor-artifacts
version = 1.0.3
author = Robpol86
author_email = robpol86@gmail.com
url = https://github.com/Robpol86/appveyor-artifacts
summary = Download artifacts from AppVeyor builds of the same commit/pull request
long_description = file: README.rst
keywords = appveyor, artifacts, travis, coverage, coveralls
license = MIT
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: MacOS X
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Terminals


[options]
py_modules = appveyor_artifacts
setup_requires = setuptools_scm;
test_suite = tests
dependency_links = 
	git+https://github.com/requests/requests.git#egg=requests-dev
install_requires =
	requests
zip_safe = True

[options.entry_points]
console_scripts = appveyor-artifacts = appveyor_artifacts:AppCLI.run

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
